<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiente"
    android:backgroundTint="@color/colorAccent"
    android:backgroundTintMode="multiply"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/ultimas_marca_es"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/markings_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/VermelhoEscuroDB1"
        app:cardCornerRadius="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/jornada_cumprida"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="2"
                android:text="@string/jornada"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                app:layout_constraintEnd_toStartOf="@+id/legenda_atuando"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/legenda_atuando"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/atuando"
                android:textAppearance="@style/TextAppearance.AppCompat.Small.Inverse"
                app:layout_constraintBottom_toBottomOf="@+id/jornada_cumprida"
                app:layout_constraintEnd_toStartOf="@+id/atuando"
                app:layout_constraintTop_toTopOf="@+id/jornada_cumprida" />

            <ImageView
                android:id="@+id/atuando"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:contentDescription="@string/atuando"
                android:src="@drawable/ic_atuando"
                app:layout_constraintBottom_toBottomOf="@+id/legenda_atuando"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/legenda_atuando" />

            <ProgressBar
                android:id="@+id/timeworked"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/customprogressbarhorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_margin="16dp"
                android:layout_marginBottom="8dp"
                android:max="100"
                android:scaleY="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jornada_cumprida"
                tools:layout_editor_absoluteX="16dp" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/registrar_ponto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/animationbutton"
        android:onClick="registrarPonto"
        android:padding="24dp"
        android:text="@string/registrar_ponto"
        android:textColor="@color/colorAccent" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/task_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/animationbutton"
        android:onClick="openTaskButtonClick"
        android:padding="24dp"
        android:text="@string/task_web"
        android:textColor="@color/colorAccent" />
</android.support.v7.widget.LinearLayoutCompat>