<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mainui.MainActivity"
    android:background="@drawable/gradiente">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="24dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="@color/VermelhoEscuroDB1">
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="24dp"
            android:layout_gravity="center_vertical">
            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logodb1"
                android:id="@+id/logodb1"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_cpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/c_p_f"
                    android:inputType="number"
                    android:maxLength="14"
                    android:textColor="@color/colorAccent"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorAccent">
                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senha"
                    android:inputType="textPassword"
                    android:textColor="@color/colorAccent"/>
            </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:id="@+id/lembrar_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lembrar-me"
                android:textColor="@color/colorAccent"
                android:layout_margin="8dp"/>
            <android.support.v7.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fazer_login"
                android:onClick="fazerLogin"
                android:background="@drawable/animationbutton"
                android:backgroundTint="@color/colorAccent"/>
            <ProgressBar
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/loading"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v7.widget.CardView>
</android.support.v7.widget.LinearLayoutCompat>